--- a/sea-config.json
+++ b/sea-config.json
@@ -1,6 +1,6 @@
 {
   "main": "dist/meshaway.cjs",
-  "output": "release/mesh",
+  "output": "release/meshaway",
   "disableExperimentalSEAWarning": true,
   "assets": {
     "ui/dashboard.js": "dist/ui/dashboard.js",
