--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   "dependencies": {
     "@base-ui/react": "^1.0.0-beta.6",
     "@hono/node-server": "^1.14.4",
+    "arktype": "^2.1.29",
     "commander": "^14.0.1",
     "esbuild": "^0.25.10",
     "hono": "^4.9.6",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "zod": "^4.1.5"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.2.42",
