--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@types/node": "^24.3.3",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
+    "opencode-ai": "^1.2.6",
     "postject": "^1.0.0-alpha.6",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^4.0.18"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
