--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "scripts": {
     "build": "tsx scripts/build.ts",
-    "dev": "tsx scripts/dev.ts",
-    "dev:ui": "cd src/hub/ui-app && vite",
+    "dev": "concurrently -k -n hub-be,hub-ui -c cyan,magenta \"cross-env MESH_NO_OPEN_BROWSER=1 pnpm exec tsx watch src/cli/index.ts\" \"cross-env MESH_HUB_URL=http://127.0.0.1:7337 pnpm run dev:ui\"",
+    "dev:ui": "vite --config src/hub/ui/vite.config.ts",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:unit": "vitest run src/test/unit",
     "test:integration": "vitest run src/test/integration",
+    "test:e2e": "vitest run src/test/e2e",
+    "runner": "tsx scripts/runner.ts",
     "test:watch": "vitest",
     "build:native": "pnpm run build && tsx scripts/package-release.ts"
   },
@@ -39,11 +41,14 @@
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
+    "@github/copilot-sdk": "^0.1.25",
     "@types/node": "^24.3.3",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.25",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.1",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.25.10",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
