--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsx scripts/build.ts",
-    "dev": "concurrently -k -n hub-be,hub-ui -c cyan,magenta \"cross-env MESH_NO_OPEN_BROWSER=1 pnpm exec tsx watch src/cli/index.ts\" \"cross-env MESH_HUB_URL=http://127.0.0.1:7337 pnpm run dev:ui\"",
+    "dev": "concurrently -k -n hub-be,hub-ui -c cyan,magenta \"cross-env MESH_NO_OPEN_BROWSER=1 pnpm exec tsx watch src/cli/index.ts hub\" \"cross-env MESH_HUB_URL=http://127.0.0.1:7337 pnpm run dev:ui\"",
     "dev:ui": "vite --config src/hub/ui/vite.config.ts",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
