chore: remove most functionality except stdio / copilot

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 # Meshaway environment variables
 # Copy to .env and adjust as needed
 
-# Backend specifier: acp:<agent> or openai-compat:<baseUrl>
-# MESH_BACKEND=openai-compat:http://127.0.0.1:11434/v1
-# MESH_BACKEND=acp:gemini-cli
+# Agent/backend specifier (e.g. acp:gemini-cli). Legacy: MESH_BACKEND also supported.
+# MESH_AGENT=acp:gemini-cli
 
 # Bridge listen address (host:port)
 # MESH_LISTEN=127.0.0.1:4321
