fix: surface errors from spawned agent executable

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Meshaway environment variables
 # Copy to .env and adjust as needed
 
-# Agent/backend specifier (e.g. acp:gemini-cli). Legacy: MESH_BACKEND also supported.
-# MESH_AGENT=acp:gemini-cli
+# Agent/agent specifier (e.g. gemini-cli). Legacy: MESH_AGENT also supported.
+# MESH_AGENT=gemini-cli
 
 # Bridge listen address (host:port)
 # MESH_LISTEN=127.0.0.1:4321
