--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Meshaway environment variables
 # Copy to .env and adjust as needed
 
-# Agent/agent specifier (e.g. gemini-cli). Legacy: MESH_AGENT also supported.
-# MESH_AGENT=gemini-cli
+# Agent/agent specifier (e.g. gemini). Legacy: MESH_AGENT also supported.
+# MESH_AGENT=gemini
 
 # Bridge listen address (host:port)
 # MESH_LISTEN=127.0.0.1:4321
