--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "vite": "^6.0.3",
     "vitest": "^4.0.18"
   },
+  "optionalDependencies": {
+    "better-sqlite3": "^11.6.0"
+  },
   "packageManager": "pnpm@10.27.0"
 }
