--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "vitest run",
     "test:unit": "vitest run src/test/unit",
     "test:integration": "vitest run src/test/integration",
-    "test:e2e": "vitest run src/test/e2e",
+    "test:e2e": "pnpm run build && vitest run src/test/e2e",
     "runner": "tsx scripts/runner.ts",
     "test:watch": "vitest",
     "build:native": "pnpm run build && tsx scripts/package-release.ts"
@@ -35,6 +35,7 @@
     "arktype": "^2.1.29",
     "chalk": "^5.3.0",
     "commander": "^14.0.1",
+    "copilot": "^0.0.2",
     "hono": "^4.9.6",
     "lucide-react": "^0.542.0",
     "pino": "^9.5.0",
@@ -48,7 +49,6 @@
   "devDependencies": {
     "@github/copilot-sdk": "^0.1.25",
     "@google/gemini-cli": "^0.28.0",
-    "opencode-ai": "^1.2.0",
     "@types/node": "^24.3.3",
     "@types/prismjs": "^1.26.6",
     "@types/react": "^18.2.73",
@@ -58,6 +58,7 @@
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
     "esbuild": "^0.25.10",
+    "opencode-ai": "^1.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "tsx": "^4.20.5",
