--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,1 @@
-{
-  "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "lib": ["ES2022"],
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "outDir": "dist/node",
-    "rootDir": "src",
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "types": ["node"]
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "release", "src/hub/ui-app"]
-}
+{"compilerOptions":{"target":"ES2022","module":"NodeNext","moduleResolution":"NodeNext","lib":["ES2022"],"strict":true,"esModuleInterop":true,"skipLibCheck":true,"forceConsistentCasingInFileNames":true,"resolveJsonModule":true,"declaration":true,"declarationMap":true,"sourceMap":true,"outDir":"dist/node","noEmit":true,"jsx":"react-jsx","types":["node"],"rootDir":"src"},"include":["src/**/*"],"exclude":["node_modules","dist","release","src/hub/ui-app"]}
