--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@offbeatport/meshaway",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Protocol bridge for agentic tools",
   "type": "module",
   "bin": {
@@ -19,8 +19,8 @@
     "test:e2e": "pnpm run build && vitest run test/e2e",
     "test:watch": "vitest",
     "build:native": "tsx scripts/build-native.ts",
+    "version": "pnpm changeset version && pnpm exec tsx scripts/sync-version.ts && pnpm install",
     "release": "pnpm run build:native && pnpm run release:npm && pnpm run release:github && pnpm run release:homebrew",
-    "release:version": "pnpm changeset version && pnpm exec tsx scripts/sync-version.ts && pnpm install",
     "release:npm": "pnpm run build && pnpm changeset publish",
     "release:github": "tsx scripts/release-github.ts",
     "release:homebrew": "tsx scripts/release-homebrew.ts"
